--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manav282.github.io/checklist",
+  "homepage": "https://manav282.github.io/todo",
   "name": "redux-todo",
   "version": "0.1.0",
   "private": true,
